Fix overlay navigation on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,12 +25,12 @@ a {
     z-index: 2; /* Sit on top */
     top: 0;
     left: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(242,51,50, 0.9);
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(242, 51, 50, 0.9);
     overflow-x: hidden; /* Disable horizontal scroll */
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
-    transition: 0.5s;
+    transition: 0.5s; /* Transition effect */
 }
 
 /* Content positioning inside the overlay */
@@ -39,31 +39,31 @@ a {
     top: 25%;
     width: 100%;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 1.875rem;
 }
 
 .overlay a {
-    padding: 8px;
+    padding: 0.5rem;
     text-decoration: none;
-    font-size: 36px;
+    font-size: 2.25rem;
     color: #fafafa;
     display: block;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
-    transition: 0.3s;
+    transition: 0.3s; /* Transition effect on hover */
 }
 
+/* When you mouseover the navigation links, the color changes */
 .overlay a:hover, .overlay a:focus {
     color: #360302;
 }
 
 .overlay .closebtn {
     position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
+    top: 1.25rem;
+    right: 2.875rem;
+    font-size: 	3.75rem;
 }
-
 
 .logo {
     position: absolute;
@@ -83,6 +83,7 @@ a {
     position: absolute;
     top: auto;
     right: 0;
+    z-index: -1;
 }
 
 .social-media i {
@@ -201,6 +202,7 @@ a {
     font-size: 1.7rem !important;
     font-family: 'Work Sans';
     margin-left: 1rem;
+    cursor: pointer;
 }
 
 #hero-image {
@@ -468,7 +470,19 @@ form input {
 }
 
 /* Media Queries */
-/* Display on tablet devices) */  
+/* Overlay navigation */
+/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+}
+
+/* Display on tablet devices */  
 
 @media only screen 
   and (min-device-width : 768px) 
@@ -482,7 +496,6 @@ form input {
 
     #hamburger {
     font-size: 1.9rem !important;
-    cursor: pointer;
     }
 
     .navbar-header {
@@ -574,17 +587,17 @@ resource: https://coderwall.com/p/mwvbea/media-queries-only-for-the-iphone-5-par
   and (-webkit-device-pixel-ratio: 2) 
   and (min-aspect-ratio: 40/71) and (orientation:portrait) {
 
-.logo {
-    width: 65px;
-    height: 65px;
-    }
+    .logo {
+        width: 65px;
+        height: 65px;
+        }
 
-#hamburger {
-    font-size: 1.5 rem;
-    margin-left: 0.5rem
-    }
+    #hamburger {
+        font-size: 1.5 rem;
+        margin-left: 0.5rem
+        }
 
-.social-media i {
-    margin-right: 0.4rem !important;
-    }
+    .social-media i {
+        margin-right: 0.4rem !important;
+        }
 }
